2009-01-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenu.m (-update, -setAutoenablesItems:, initWithCoder):
	Revert NSMenu changes from r27569.

	* Source/NSMenu.m (-update): Improve menu item validation by
	falling back to -validateUserInterfaceItem: if the validator
	doesn't respond to -validateMenuItem:.

2009-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-windowForSheet): Return nil if the
	document has no window controllers.

	* Source/NSWindow.m (-undoManager, -dealloc): Create an undo
	manager for a window when necessary.

	* Source/NSWindow.m (-sendEvent:): Don't activate an application
	upon a single click into a miniwindow.

2009-01-16 12:04-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuItem.m: Retain the GSMenuSeparator instance if
	the menu item is a separator since we want to make sure the 
	object isn't prematurely released.  

2009-01-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAnimation.m: _gs_startAnimationInOwnLoop hopefully fixed
	bug #25327

2009-01-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTextStorage.m: Change to use new GC finalization API.

2009-01-12 10:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: More documentation.

2009-01-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-initWithCoder:): Replace the key
	equivalent when it was set wrongly by Gorm.
	Patch by Wolfgang Lux  <wolfgang.lux@gmail.com>.

2009-01-11 20:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Reorganization and simplification of
	nib loading logic in NSIBObjectData.  Also documentation for 
	NSIBObjectData and NSClassSwapper.

2009-01-10 15:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSToolbarItem.m: Added _sendAction: method to send
	the action with the NSToolbarItem instance as the sender
	when the toolbar item is represented by an NSMenuItem.  
